--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   width: 360px;
   margin: 0 auto;
   font-family: "Gill Sans", sans-serif;
-  background-color: grey;
 }
 
 @media only screen and (max-width: 760px) and (min-width: 360px) {
@@ -19,7 +18,6 @@ body {
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
   body {
-    /* width: 768px; */
     width: 100%;
   }
 }
@@ -29,6 +27,85 @@ body {
     width: 1024px;
   }
 }
+
+/* navbar */
+
+.navbar {
+  overflow: hidden;
+  background-color: #f0f0f0;
+  position: relative;
+}
+
+.navbar #myLinks {
+  display: none;
+}
+
+.navbar a {
+  color: #56bfc2;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.navbar a.icon {
+  background: white;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: white;
+}
+
+.hotel-resort {
+  color: #e1c16e;
+  font-size: 25px;
+  text-shadow: 1px 1px grey;
+}
+
+/* services */
+
+/* .services {
+  /* padding-top: 30px;
+  padding-bottom: 30px;
+  height: 360px;
+  background-color: #dcdcdc; */
+/* } */
+
+/* .services_title {
+  /* display: flex;
+  justify-content: center;
+  font-size: 18px; */
+/* }
+
+.line_services { */
+/* border: 1px solid #e1c16e;
+  width: 3%;
+  margin-top: -10px; */
+/* } */
+
+/* .services_items { */
+/* display: flex;
+  list-style: none;
+  justify-content: space-around;
+  margin-top: 40px; */
+/* } */
+
+/* .services_item {
+  /* display: flex;
+  align-items: center;
+  text-align: center;
+  padding-right: 50px;
+  flex-direction: column; */
+/* }   
 
 /* features rooms cards  */
 
