--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 .navbar a {
-  color: #56bfc2;
+  color: #e1c16e;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
@@ -50,10 +50,12 @@ body {
 
 .navbar a.icon {
   background: white;
+  font-size: 25px;
   display: block;
   position: absolute;
   right: 0;
   top: 0;
+  padding-top: 20px;
 }
 
 .topnav a:hover {
@@ -66,8 +68,8 @@ body {
 }
 
 .hotel-resort {
-  color: #e1c16e;
-  font-size: 25px;
+  color: #56bfc2;
+  font-size: 30px;
   text-shadow: 1px 1px grey;
 }
 
