--- a/style.css
+++ b/style.css
@@ -270,3 +270,15 @@ body {
   background-color: #dcdcdc;
   font-size: 15px;
 }
+
+
+/* filters */
+
+.filters {
+  display: flex;
+  width: 80%;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-between;
+  padding: 20px;
+}
