--- a/style.css
+++ b/style.css
@@ -5,34 +5,95 @@
 }
 
 body {
-  width: 360px;
-  margin: 0 auto;
+ margin: 0 auto; 
   font-family: "Gill Sans", sans-serif;
 }
 
-@media only screen and (max-width: 760px) and (min-width: 360px) {
-  body {
-    width: 100%;
-  }
+
+/* MEDIA QUERY*/
+
+@media only screen and (max-width: 768px) and (min-width: 360px) {
+   body {
+    width: 98%;
+  } 
+
+/* services */
+.parent {
+display: grid;
+grid-template-columns: 1fr;
+grid-template-rows: 1fr;
+grid-column-gap: 10px;
+grid-row-gap: 10px;
+list-style: none;
+padding: 40px 40px 40px 5px;
+text-align: center;
+}
+/* services */
+
+
+.line_features_rooms {
+  width: 5rem;
 }
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {
+} 
+
+ @media only screen and (max-width: 1024px) and (min-width: 768px){ 
   body {
-    width: 100%;
-  }
+    width: 98%;
+  } 
+  
+/* services */
+.parent {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+grid-column-gap: 10px;
+grid-row-gap: 10px;
+list-style: none;
+padding: 40px 40px 40px 5px;
+text-align: center;
 }
+
+.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 2 / 1 / 3 / 2; }
+.div4 { grid-area: 2 / 2 / 3 / 3; }
+/* services */
+}
+
 
 @media screen and (min-width: 1024px) {
-  body {
-    width: 1024px;
-  }
+   body {
+    width: 98%;
+  } 
+/* services */
+.parent {
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+grid-template-rows: 1fr;
+grid-column-gap: 10px;
+grid-row-gap: 10px;
+list-style: none;
+padding: 40px 40px 40px 5px;
+text-align: center;
 }
+
+.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 1 / 3 / 2 / 4; }
+.div4 { grid-area: 1 / 4 / 2 / 5; }
+/* services */
+} 
+
+/* MEDIA QUERY*/
+
+
 
 /* navbar: logo + hamburguer menu */
 
 .navbar {
   overflow: hidden;
-  background-color: #f0f0f0;
+background-color: white;
   position: relative;
 }
 
@@ -62,14 +123,11 @@ body {
   color: #56bfc2;
 } 
 
-.active {
-  background-color: white;
-}
 
 .hotel-resort {
   color: #56bfc2;
   font-size: 30px;
-  text-shadow: 1px 1px grey;
+   text-shadow: 1px 1px grey; 
 }
 
 /* imagen principal, h2, boton habitaciones */
@@ -128,50 +186,34 @@ body {
 }
 
 /* services */
-/* 
+ 
 .services {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  height: 360px; 
-} */
+  background-color: #dcdcdc;
+} 
 
 .services_title {
   text-align: center;
+  padding-top: 30px;
+  font-size: 18px;
 }
 
 .line_services {
   border: 1px solid #e1c16e;
-  width: 10%;
-}
-
-.services_items {
-  display: flex;
-  list-style: none;
-  justify-content: center;
-  flex-direction: column;
-  background-color: #dcdcdc;
-}
-
-.services_item {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
-  padding: 50px 50px 20px 10px;
+  width: 5rem;
+  margin-top: -10px;
 }
 
 /* rooms title, line and cards style */
 
 .features_rooms_title {
   padding-top: 30px;
-  display: flex;
-  justify-content: center;
+  text-align: center;
   font-size: 18px;
 }
 
 .line_features_rooms {
   border: 1px solid #e1c16e;
-  width: 30%;
+  width: 15rem;
   margin-top: -10px;
 }
 
@@ -181,9 +223,18 @@ body {
   padding-bottom: 30px;
   display: flex;
   justify-content: center;
+  flex-direction: row;
   flex-wrap: wrap;
 }
 
+.row {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: space-between;
+  flex-wrap: wrap;
+ 
+}
 .card {
   border-radius: 5px;
   width: 350px;
@@ -198,7 +249,7 @@ body {
   transform: scale(1.1);
   box-shadow: 0px 0px 15px 0px;
 }
-.card:hover button {
+.card:hover .card-button {
   opacity: 1;
   background-color: #56bfc2;
   font-size: 16px;
@@ -209,16 +260,13 @@ body {
 
 .card:hover .card-img {
   opacity: 0.5;
-  /* transform: scale(1.1); */
   box-shadow: 0px 0px 15px 0px;
   cursor: pointer;
 }
 
 .card-img {
-  /* border-radius: 10px 10px 0 0; */
   background-size: cover;
   background-position: center;
-  background-image: url("https://pixabay.com/es/photos/hotel-resort-vino-botella-rojo-4689409/");
   overflow: hidden;
   height: 200px;
   width: 100%;
@@ -259,8 +307,7 @@ body {
   transition: 0.6s ease;
 }
 
-@media screen and (max-width: 800px) {
-}
+
 
 /* footer */
 
@@ -274,11 +321,53 @@ body {
 
 /* filters */
 
-.filters {
+
+/* Control buttons  */
+.filterDiv {
+  display: none; /* Hidden by default */
+}  
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 18px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  margin: 5px;
+}
+
+
+/* Add a dark background to the active button */
+.active, .btn:hover {
+  background-color: #56bfc2;
+  color: white;
+}
+
+#myBtnContainer {
   display: flex;
-  width: 80%;
+  justify-content: center; 
+  flex-direction: row;
   flex-wrap: wrap;
-  margin: 0 auto;
-  justify-content: space-between;
-  padding: 20px;
+     margin:0 auto;
+}
+
+/* SEARCH INPUT */
+
+ .cards-filter {
+margin: 15px 15px;;
+display: flex;
+justify-content:center;
+
+} 
+
+.search-input {
+  width: 100%;
+ margin:0 auto;
+padding: 12px 16px;
 }
