--- a/style.css
+++ b/style.css
@@ -30,10 +30,36 @@ text-align: center;
 }
 /* services */
 
+ 
+/* imagen principal, h2, boton habitaciones */
 
-.line_features_rooms {
-  width: 5rem;
+
+.cta-home{
+  width: 50%;
+  height: 50%;
+  padding-top: 30px;
 }
+
+
+.intro_title {
+  font-size: 30px;
+}
+ 
+.line_intro_title {
+  margin-top: -10px;
+} 
+ 
+.intro_spirit {
+  font-size: 25px;
+  margin-bottom: 50px;
+}
+ 
+.intro_button {
+  padding: 10px 20px;
+  font-size: 10px;
+}
+
+/* imagen principal, h2, boton habitaciones */
 
 } 
 
@@ -59,6 +85,38 @@ text-align: center;
 .div3 { grid-area: 2 / 1 / 3 / 2; }
 .div4 { grid-area: 2 / 2 / 3 / 3; }
 /* services */
+
+ 
+/* imagen principal, h2, boton habitaciones */
+
+
+.cta-home{
+  width: 50%;
+  height: 50%;
+   padding-top: 20px;
+}
+
+.intro_title {
+  font-size: 40px;
+}
+ 
+.line_intro_title {
+  margin-top: -30px;
+} 
+ 
+.intro_spirit {
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+ 
+.intro_button {
+  padding: 15px 35px;
+  font-size: 15px;
+}
+
+
+
+/* imagen principal, h2, boton habitaciones */
 }
 
 
@@ -83,6 +141,36 @@ text-align: center;
 .div3 { grid-area: 1 / 3 / 2 / 4; }
 .div4 { grid-area: 1 / 4 / 2 / 5; }
 /* services */
+
+ 
+
+/* imagen principal, h2, boton habitaciones */
+
+.cta-home{
+  width: 50%;
+  height: 60%;
+  padding-top: 10px;
+}
+.intro_title {
+  font-size: 60px;
+}
+ 
+.line_intro_title {
+  margin-top: -30px;
+} 
+ 
+.intro_spirit {
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+ 
+.intro_button {
+  padding: 20px 45px;
+  font-size: 18px;
+}
+
+/* imagen principal, h2, boton habitaciones */
+
 } 
 
 /* MEDIA QUERY*/
@@ -135,31 +223,33 @@ background-color: white;
 .intro {
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
   background-image: url("images/home-image.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 350px;
+  height: 600px;
+  border-style: solid 2px;
 }
 
 .cta-home {
   box-shadow: 0px 0px 15px -5px;
   border: 0.5px solid #a9a9a9;
   background: rgba(120, 120, 120, 0.5);
-  margin: 80px 50px;
+  margin: 70px 50px; 
+  width: 70%;
 }
 
 .intro_title {
   color: white;
   text-shadow: 2px 2px grey;
-}
+} 
 
 .line_intro_title {
   border: 1px solid #e1c16e;
-  width: 25%;
-  margin-top: -5px;
+  width: 50%;
 }
 
 .intro_spirit {
@@ -169,12 +259,13 @@ background-color: white;
 
 .intro_button {
   background-color: #e1c16e;
-  padding: 5px 10px;
-  margin-bottom: 40px;
   text-transform: uppercase;
-  font-size: 15px;
-  font-weight: 500;
-  /* border-radius: 10px; */
+  font-size: 18px;
+  font-weight: 400;
+  color: white;
+   text-shadow: 1px 1px black;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .intro_button:hover {
@@ -243,6 +334,8 @@ background-color: white;
   flex-direction: column;
   box-shadow: 0px 0px 15px -5px;
   transition: 0.2s;
+  text-align: center;
+  font-size: 12px;
 }
 
 .card:hover {
@@ -275,10 +368,10 @@ background-color: white;
 .card-body {
   padding: 10px 20px;
 }
-.card-body h2 {
+/* .card-body h2 {
   margin: 5px 0px;
   text-align: center;
-}
+} */
 
 .card-button {
   border: none;
@@ -336,10 +429,10 @@ background-color: white;
 .btn {
   border: none;
   outline: none;
-  padding: 12px 18px;
+  padding: 15px 20px;
   background-color: #f1f1f1;
   cursor: pointer;
-  margin: 5px;
+  margin: 5px ;
 }
 
 
@@ -368,6 +461,7 @@ justify-content:center;
 
 .search-input {
   width: 100%;
- margin:0 auto;
+ margin:40 20 auto;
 padding: 12px 16px;
+font-size: 15px;
 }
